WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45431
regression? chromium/linux: svg/dynamic-updates/SVGFEDiffuseLightingElement-lighting-color-css-prop.html
https://bugs.webkit.org/show_bug.cgi?id=45431
Summary
regression? chromium/linux: svg/dynamic-updates/SVGFEDiffuseLightingElement-l...
Fumitoshi Ukai
Reported
2010-09-08 18:11:27 PDT
chromium/linux shows unexpected image mismatch on svg/dynamic-updates/SVGFEDiffuseLightingElement-lighting-color-css-prop.html e.g.
http://build.chromium.org/buildbot/waterfall.fyi/builders/Webkit%20Linux%20(webkit.org)/builds/37496/steps/webkit_tests/logs/stdio
It looks win expectation is red, but linux and mac is yellow, and actual image on linux becomes red.
Attachments
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-09-09 18:19:34 PDT
(In reply to
comment #0
)
> chromium/linux shows unexpected image mismatch on svg/dynamic-updates/SVGFEDiffuseLightingElement-lighting-color-css-prop.html > > e.g.
http://build.chromium.org/buildbot/waterfall.fyi/builders/Webkit%20Linux%20(webkit.org)/builds/37496/steps/webkit_tests/logs/stdio
> > It looks win expectation is red, but linux and mac is yellow, and actual image on linux becomes red.
I think the current actual result of Chromium-linux is yellow. So, the current baseline for Chromium-linux is wrong (red), and we need to do rebaseline. I'll handle this.
Kent Tamura
Comment 2
2010-09-09 18:56:07 PDT
Done rebaseline by
r67144
.
Dirk Pranke
Comment 3
2010-09-09 20:07:48 PDT
Reverted
r67145
for reason: broke editing/inserting/5994480-2.html on Chromium Linux Committed
r67154
: <
http://trac.webkit.org/changeset/67154
>
Kent Tamura
Comment 4
2010-09-09 20:26:33 PDT
Dirk, you seems to have reopened a wrong bug.
Dirk Pranke
Comment 5
2010-09-09 21:09:37 PDT
whoops. this should still be closed.
Zoltan Herczeg
Comment 6
2010-09-09 23:36:25 PDT
> It looks win expectation is red, but linux and mac is yellow, and actual image on linux becomes red.
Red is wrong (see the description of the image). And Dirk Pranke mentioned that now the mac is fixed, I should update the description as well. Perhaps another rebaseline will be needed for Chromium. See:
https://bugs.webkit.org/show_bug.cgi?id=43954
There is a patch with r? there.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug